test/ui/src/compile_fail/std/setup_unflushed.rs
#![deny(warnings)]

fn main() {
    let rt = emit::setup().init();
}
